# MySweetHome

./: .gitignore  CMakeLists.txt  Dockerfile  Downgrade: Removed Device Core and Factories (Dev: 220208029)  PROJECT_REPORT.md  README.md
.github/workflows/: cmake.yml
include/: Camera.h  HomeController.h  NotificationSystem.h  SecuritySystem.h
src/: AlarmHandler.cpp  Camera.cpp  DetectionSystem.cpp  Menu.cpp  NotificationSystem.cpp  SecuritySystem.cpp  main.cpp
tests/: CMakeLists.txt  manual_sequence_test.cpp
web/: server.js
web/public/: app.js  index.html
